# assembly-avx2-dot-product

./: CMakeLists.txt  README.md  main.c
asm/: dot_basic.asm  dot_ymm.asm
